--- a/index.html
+++ b/index.html
@@ -42,5 +42,39 @@
 
     
     </header>
+
+    <main classe="grid container">
+        <section id="featured" class="grid grid-flow-col gap-16">
+        <figure class="card">
+            <img src="assets/imagens/Image 01.png" alt="">
+
+
+            <figcaption>
+                <span classe="content-tag">robótica</span>
+                <h2 class="text-2xl">
+                    Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
+                </h2>
+                </figcaption>
+        </figure>
+
+        <div class="grid grid-cols-2 gap-16">
+            <img src="assets/imagens/Image 02.png" alt="">
+        </div>
+
+        <div>
+            <img src="assets/imagens/Image 03.png" alt="">
+        </div>
+
+        <div>
+            <img src="assets/imagens/Image 04.png" alt="">
+        </div>
+
+        <div>
+            <img src="assets/imagens/Image 05.png" alt="">
+        </div>
+
+        </section>
+
+    </main>
 </body>
 </html>
